--- a/src/component/pages/Projects/SingleProject/styles.module.scss
+++ b/src/component/pages/Projects/SingleProject/styles.module.scss
@@ -10,6 +10,7 @@
     
     @include responsive($desktop) {
         @include flex(column, flex-start, flex-start);
+        margin-top: 100px;
     }
 
     h3 {
