--- a/src/shared/hoc/Layout/styles.module.scss
+++ b/src/shared/hoc/Layout/styles.module.scss
@@ -3,12 +3,13 @@
 
 .Layout {
     height: 100%;
+    min-height: 100vh;
     width: 100%;
     margin-top: 142px;
     @include flex(column, center, center);
     
     @include responsive($desktop) {
-        margin-top: 50px;
+        margin-top: 0px;
     }
 
     main {
