--- a/src/component/pages/Skills/SkillFilmmaking/styles.module.scss
+++ b/src/component/pages/Skills/SkillFilmmaking/styles.module.scss
@@ -2,7 +2,7 @@
 @import '../../../../shared/sass/partials/mixins';
 
 .Skills-film {
-    @include flex(row, center, center);
+    @include flex(row, flex-start, center);
     flex-wrap: wrap; 
 }
 
