--- a/src/component/pages/Projects/ProjsFilmmaking/styles.module.scss
+++ b/src/component/pages/Projects/ProjsFilmmaking/styles.module.scss
@@ -22,7 +22,6 @@
             height: 100%;
             border-radius: 13px;
             object-fit: cover;
-            filter: grayscale(1);
         }
         
         &-title--wrap {
@@ -37,12 +36,14 @@
 
             &:hover {
                 opacity: 1;
-                background: linear-gradient(180deg, #3969f678 0%, #b740f09e 100%)
+                background: linear-gradient(180deg, #3969f6f7 0%, #b740f0ed 100%);
             }
 
 
             &-text {
                 cursor: pointer;
+                font-weight: $fw-regular;
+                font-size: 1.125rem;
             }
         }
 
