--- a/src/component/pages/Home/styles.module.scss
+++ b/src/component/pages/Home/styles.module.scss
@@ -5,6 +5,7 @@
     width: 100%;
     height: 100vh;
     height: calc(var(--vh, 1vh) * 100);
+    overflow: hidden;
 
     @include responsive($tablet) {
             padding: 0 30px; 
