--- a/src/shared/sass/App.scss
+++ b/src/shared/sass/App.scss
@@ -2,6 +2,19 @@
 @import 'partials/variables';
 @import 'partials/mixins';
 
+body::-webkit-scrollbar {
+  width: 1em;
+}
+ 
+body::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+ 
+body::-webkit-scrollbar-thumb {
+  background: linear-gradient(45deg, #4565f600, #4565f6);
+  border-radius: 10px;
+}
+
 .App {
   position: relative;;
   width: 100%;
