--- a/src/shared/hoc/Layout/Header/styles.module.scss
+++ b/src/shared/hoc/Layout/Header/styles.module.scss
@@ -1,29 +1,28 @@
-@import '../../../../shared/sass/partials/_variables.scss';
-@import '../../../../shared/sass/partials/mixins';
+@import "../../../../shared/sass/partials/_variables.scss";
+@import "../../../../shared/sass/partials/mixins";
 
 .Header {
-    z-index: 1;
-    position: fixed;
-    top: 0;
-    background: linear-gradient(180deg, #282c34 60%, #282c3400 210%);
-    width: 100%;
-    padding: 20px 50px;
+  z-index: 1;
+  position: fixed;
+  top: 0;
+  background: linear-gradient(180deg, #282c34 60%, #282c3400 210%);
+  width: 100%;
+  max-width: 1480px;
+  padding: 20px 50px;
 
-    @include flex(column, space-between, center);
+  @include flex(column, space-between, center);
+
+  @include responsive($desktop) {
+    flex-direction: row;
+  }
+
+  .Logo {
+    width: 100px;
+    height: auto;
+    margin-bottom: 20px;
 
     @include responsive($desktop) {
-        flex-direction: row;
+      margin-bottom: 0;
     }
-
-    .Logo {
-        width: 100px;
-        height: auto;
-        margin-bottom: 20px;
-
-        @include responsive($desktop) {
-            margin-bottom: 0;
-        }
-    }
+  }
 }
-
-
