--- a/src/component/pages/Projects/ProjsDevelopment/styles.module.scss
+++ b/src/component/pages/Projects/ProjsDevelopment/styles.module.scss
@@ -1,61 +1,50 @@
-@import '../../../../shared/sass/partials/_variables.scss';
-@import '../../../../shared/sass/partials/mixins';
+@import "../../../../shared/sass/partials/_variables.scss";
+@import "../../../../shared/sass/partials/mixins";
 
 .Projs-dev {
-    @include flex(row, center, center);
-    flex-wrap: wrap;
+  @include flex(row, center, center);
+  flex-wrap: wrap;
 
-    @include responsive($desktop) {
-        justify-content: flex-start;
-        height: 90%;
-        overflow: auto;
+  @include responsive($desktop) {
+    justify-content: flex-start;
+    align-content: center;
+    height: 90%;
+    overflow: auto;
+  }
+
+  .Card {
+    position: relative;
+    width: 250px;
+    height: 150px;
+    margin: 10px;
+
+    img {
+      width: 100%;
+      height: 100%;
+      border-radius: 13px;
+      object-fit: cover;
     }
 
-    .Card {
-        position: relative;
-        width: 250px;
-        height: 150px;
-        margin: 10px;
-        
-        img {
-            width: 100%;
-            height: 100%;
-            border-radius: 13px;
-            object-fit: cover;
-        }
-        
-        &-title--wrap {
-            position: absolute;
-            @include flex(column, center, center);
-            width: 100%;
-            height: 100%;
-            top: 0;
-            left: 0;
-            opacity: 0;
-            border-radius: 13px;
+    &-title--wrap {
+      position: absolute;
+      @include flex(column, center, center);
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      opacity: 0;
+      border-radius: 13px;
 
-            &:hover {
-                opacity: 1;
-                background: linear-gradient(180deg, #3969f6f7 0%, #b740f0ed 100%);
-            }
+      &:hover {
+        opacity: 1;
+        background: linear-gradient(180deg, #3969f6f7 0%, #b740f0ed 100%);
+      }
 
-
-            &-text {
-                cursor: pointer;
-                font-weight: $fw-regular;
-                font-size: 1.125rem;
-            }
-        }
-
+      &-text {
+        cursor: pointer;
+        font-weight: $fw-regular;
+        font-size: 1.125rem;
+      }
     }
+  }
 }
-
-
-
-
-
-
-
-
-
-
