--- a/src/component/pages/Projects/SingleProject/styles.module.scss
+++ b/src/component/pages/Projects/SingleProject/styles.module.scss
@@ -10,7 +10,7 @@
 
   @include responsive($desktop) {
     @include flex(column, flex-start, flex-start);
-    margin-top: 100px;
+    margin-top: 190px;
     padding: 0 120px;
   }
 
@@ -34,6 +34,10 @@
   &-cover {
     width: 100%;
     height: 320px;
+
+    @include responsive($desktop) {
+      height: 600px;
+    }
 
     img {
       width: 100%;
