--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,3 @@
-// Commons
-@import 'shared/sass/partials/variables.scss';
-@import 'shared/sass/partials/mixins';
-
 * {
   margin: 0;
   padding: 0;
@@ -9,9 +5,9 @@
 }
 
 body {
-  background-color: $body-bg;
-  color: $light;
-  font-family: $font-family-sans-serif;
+  background-color: #151515;
+  color: #cccccc;
+  font-family: Inter, "sans-serif";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
