--- a/src/index.scss
+++ b/src/index.scss
@@ -5,8 +5,7 @@
 }
 
 body {
-  background-color: #151515;
-  color: #cccccc;
+  color: #E7E7E7;
   font-family: Inter, "sans-serif";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
