--- a/src/index.scss
+++ b/src/index.scss
@@ -5,8 +5,9 @@
 }
 
 body {
-  color: #E7E7E7;
+  color: #e7e7e7;
   font-family: Inter, "sans-serif";
+  letter-spacing: -0.35px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
